added a new background color

--- a/extensions.html
+++ b/extensions.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="extensions.css">
 </head>
 <body>
-    <input type="text" id="input-el">
-    <button id="input-btn">save input</button>
-    <button id="tab-btn">save tab</button>
-    <button id="delete-btn">delete all</button>
-    <ul id="ul-el"></ul>
+    <div class="container">
+            <input type="text" id="input-el">
+            <button id="input-btn">save input</button>
+            <button id="tab-btn">save tab</button>
+            <button id="delete-btn">delete all</button>
+             <ul id="ul-el"></ul>
+</div>
     
     <script src="extensions.js"></script>
 </body>
